# text2sql-mvp

./: .env.example  .gitignore  AGENTS.md  AGENTS.zh-CN.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  start.sh  stop.sh  tmp_audit.sqlite3  winKaiShi.sh  winTingZhi.sh
configs/: business_semantics_20260624.yaml  entity_enrichment.yaml  llm.example.yaml  performance.yaml  semantic_overrides.yaml  whitelist_tables.yaml
configs/business_semantics/: merchant.yaml  payment_order.yaml  refund_order.yaml  (+1 more)
docs/: architecture.md  architecture.zh-CN.md  group-qa-wechat.md  heuristic-before-llm-wechat.md  lecture-script.md  mcp-integration.md  mcp-integration.zh-CN.md  openai-data-agent-wechat.md  preaggregation-loop.md  preaggregation-loop.zh-CN.md  schema-generation.md  schema-generation.zh-CN.md  text2sql-intro-wechat.md  text2sql-intro.md  text2sql-principles-wechat.md  vip-teaching-wechat.md  why-not-llm-end-to-end-wechat.md
eval_cases/: cases.yaml
scripts/: create_tables.sql  enrich_semantics.py  extract_jpa_metadata.py  introspect_schema.py  run_evals.py  start_api.sh
tests/: conftest.py  test_address_parser.py  test_api.py  test_audit_reporting.py  test_business_semantics.py  test_column_labels.py  test_context.py  test_conversation.py  test_disambiguation.py  test_display_columns.py  test_eval_compare.py  test_evals.py  test_field_encryption.py  test_field_explanation.py  test_formatter.py  test_mcp_server.py  test_memory.py  test_phone_follow_up.py  test_semantic_enrichment.py  test_service.py  test_sql_guard.py  test_visualization.py
(+5 files in other folders)
